--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -329,14 +329,11 @@
 </p>
 <h3><span id="Dialogov.C3.A9_okno_v.C3.BDb.C4.9Bru_Sketcheru"></span><span class="mw-headline" id="Dialogov&eacute;_okno_v&yacute;b&#283;ru_Sketcheru">Dialogov&eacute; okno v&yacute;b&#283;ru Sketcheru</span></h3>
 <p>Hrany a body lze tak&eacute; vybrat v sekci Prvky <a href="../Sketcher_Dialog.html" title="Sketcher Dialog">dialogov&eacute;ho okna Sketcheru</a> a vazby v sekci Vazby tohoto dialogov&eacute;ho okna.
+</p><p><span id="Select_All_shortcut"></span>
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h3><span class="mw-headline" id="Select_All_shortcut">Select All shortcut</span></h3>
-</div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
+<h3><span id="Kl.C3.A1vesov.C3.A1_zkratka_Vybrat_v.C5.A1e"></span><span class="mw-headline" id="Kl&aacute;vesov&aacute;_zkratka_Vybrat_v&scaron;e">Kl&aacute;vesov&aacute; zkratka Vybrat v&scaron;e</span></h3>
 <p><span style="font-size:small;"><a href="../Release_notes_1.1.html" title="Release notes 1.1">introduced in 1.1</a></span>
 </p>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>To select everything within a sketch, use the standard keyboard shortcut <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Ctrl</span>+<span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">A</span> or the <b>Edit &rarr; Select All</b> option from the menu.
 </p>
@@ -486,13 +483,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118151428
+Cached time: 20260118151512
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.433 seconds
-Real time usage: 0.639 seconds
-Preprocessor visited node count: 1402/1000000
+CPU time usage: 0.394 seconds
+Real time usage: 1.744 seconds
+Preprocessor visited node count: 1401/1000000
 Post&#8208;expand include size: 34962/2097152 bytes
 Template argument size: 9779/2097152 bytes
 Highest expansion depth: 7/100
@@ -502,19 +499,19 @@ Unstrip post&#8208;expand size: 4773/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   42.111      1 -total
- 17.68%    7.447      1 Template:Sketcher_Tools_navi/cs
- 12.70%    5.346      1 Template:Userdocnavi/cs
- 12.61%    5.310      2 Template:Navigation_menu_2
- 11.65%    4.905      1 Template:PropertyView
-  9.70%    4.087     34 Template:Version
-  7.53%    3.170      5 Template:MenuCommand
-  7.03%    2.960      2 Template:Docnav
-  6.99%    2.943     14 Template:KEY
-  5.72%    2.408      1 Template:Variable
+100.00%  108.457      1 -total
+ 15.87%   17.210      1 Template:PropertyView
+ 15.28%   16.574      1 Template:Sketcher_Tools_navi/cs
+ 15.02%   16.288      8 Template:VersionPlus
+ 11.89%   12.901      2 Template:Docnav
+  9.87%   10.704      1 Template:Variable
+  8.30%    9.001      2 Template:Navigation_menu_2
+  7.67%    8.324      1 Template:Userdocnavi/cs
+  7.33%    7.951     34 Template:Version
+  5.65%    6.130      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118151428 and revision id 1740681. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118151512 and revision id 1740685. Rendering was triggered because: unknown
  -->
 </div>
 </div><script src="../site.js"></script>
