--- a/wiki/Cables_CableConduit.html
+++ b/wiki/Cables_CableConduit.html
@@ -101,15 +101,15 @@ or <a href="Cables_CompoundPath.html" title="Cables CompoundPath">Cables Compoun
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260118194509
+Cached time: 20260118194528
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.087 seconds
-Real time usage: 0.219 seconds
-Preprocessor visited node count: 668/1000000
-Post&#8208;expand include size: 10489/2097152 bytes
-Template argument size: 2779/2097152 bytes
+CPU time usage: 0.091 seconds
+Real time usage: 0.123 seconds
+Preprocessor visited node count: 662/1000000
+Post&#8208;expand include size: 10471/2097152 bytes
+Template argument size: 2769/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -117,19 +117,19 @@ Unstrip post&#8208;expand size: 858/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   64.039      1 -total
- 29.16%   18.675      4 Template:TitleProperty
- 15.56%    9.967      7 Template:PropertyData
- 14.97%    9.586      1 Template:GuiCommand
- 13.53%    8.662      7 Template:Variable
-  9.63%    6.169      2 Template:Caption
-  6.58%    4.215      1 Template:Value
-  6.38%    4.084      8 Template:Incode
-  6.27%    4.014      4 Template:TRUE
-  6.02%    3.857      2 Template:MenuCommand
+100.00%   25.892      1 -total
+ 28.34%    7.338      7 Template:PropertyData
+ 21.35%    5.528      7 Template:Variable
+ 14.04%    3.636      1 Template:GuiCommand
+ 11.50%    2.978      4 Template:TitleProperty
+  9.47%    2.451      2 Template:Docnav
+  7.57%    1.960      1 Template:FALSE
+  6.96%    1.801      7 Template:Incode
+  6.54%    1.693      2 Template:Caption
+  6.52%    1.689      4 Template:TRUE
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:382576-0!canonical and timestamp 20260118194507 and revision id 1740793. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:382576-0!canonical and timestamp 20260118194527 and revision id 1740795. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
