--- a/wiki/Cables_CableBox.html
+++ b/wiki/Cables_CableBox.html
@@ -158,15 +158,15 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260118194509
+Cached time: 20260118194528
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.094 seconds
-Real time usage: 0.272 seconds
-Preprocessor visited node count: 2179/1000000
-Post&#8208;expand include size: 21316/2097152 bytes
-Template argument size: 4581/2097152 bytes
+CPU time usage: 0.115 seconds
+Real time usage: 0.142 seconds
+Preprocessor visited node count: 2152/1000000
+Post&#8208;expand include size: 21244/2097152 bytes
+Template argument size: 4541/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 3/100
 Unstrip recursion depth: 0/20
@@ -174,19 +174,19 @@ Unstrip post&#8208;expand size: 1376/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   99.362      1 -total
- 30.22%   30.028     27 Template:PropertyData
- 24.98%   24.820     27 Template:Variable
-  9.70%    9.641      3 Template:TitleProperty
-  8.09%    8.038     17 Template:Value
-  6.51%    6.466      1 Template:GuiCommand
-  4.94%    4.907      3 Template:Caption
-  4.14%    4.116     40 Template:Incode
-  3.77%    3.748      2 Template:Docnav
-  3.26%    3.237      2 Template:Code
+100.00%   40.012      1 -total
+ 34.60%   13.844     27 Template:PropertyData
+ 26.36%   10.546     27 Template:Variable
+ 11.39%    4.559     13 Template:Value
+  9.45%    3.780      1 Template:GuiCommand
+  7.18%    2.875      3 Template:TitleProperty
+  7.14%    2.855     36 Template:Incode
+  4.69%    1.877      2 Template:Code
+  4.68%    1.871      2 Template:Docnav
+  3.78%    1.511      6 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:372376-0!canonical and timestamp 20260118194507 and revision id 1740794. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:372376-0!canonical and timestamp 20260118194528 and revision id 1740796. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
