--- a/wiki/Cables_CableBox.html
+++ b/wiki/Cables_CableBox.html
@@ -107,7 +107,7 @@
 <p><span style="color: #fdfdfd; background-color: #909090; font-size: 112%; font-weight: bold; margin-bottom: .3em; padding: 0px 10px 1px 10px; page-break-after: avoid;">Cable Box</span>
 </p>
 <ul><li><span style="font-size:60%; padding-right:0.8em;">Data</span><b>Box Body Hidden</b><span style="font-size:80%;"> (<code>Bool</code>)</span>: If set to <code>true</code> the box shape is hidden to make it easier to edit wires inside a box (with possible help of helper rings). It should be set to <code>false</code> when wires editing is finished or not needed.</li>
-<li><span style="font-size:60%; padding-right:0.8em;">Data</span><b>Claim Children</b><span style="font-size:80%;"> (<code>Bool</code>)</span>: If it is <code>true</code> it will claim the linked SuppLines as children in the <a href="Tree_View.html" title="Tree View">Tree View</a> (<span style="color:blue;">introduced in version 0.3.3</span>).</li>
+<li><span style="font-size:60%; padding-right:0.8em;">Data</span><b>Claim Children</b><span style="font-size:80%;"> (<code>Bool</code>)</span>: If set to <code>true</code> it will claim the linked SuppLines as children in the <a href="Tree_View.html" title="Tree View">Tree View</a> (<span style="color:blue;">introduced in version 0.3.3</span>).</li>
 <li><span style="font-size:60%; padding-right:0.8em;">Data</span><b>Depth</b><span style="font-size:80%;"> (<code>Length</code>)</span>: Specifies the inner depth of the box. The default depth is 74 mm. Available if <b>Profile Type</b> property = <code>Rectangle</code>.</li>
 <li><span style="font-size:60%; padding-right:0.8em;">Data</span><b>Diameter</b><span style="font-size:80%;"> (<code>Length</code>)</span>: Specifies the inner diameter of the box. The default diameter is 60 mm. Available if <b>Profile Type</b> property = <code>Circle</code>.</li>
 <li><span style="font-size:60%; padding-right:0.8em;">Data</span><b>Din Rails</b><span style="font-size:80%;"> (<code>Bool</code>)</span>: If set to <code>true</code> the <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/DIN_rail">DIN TH35 rail</a> is added automatically to box body depending on box shape and dimensions. The rail is placed 50 mmm below the top of the box, the distance between rails is set to 125 mm. The cable box has to be big enough to allow auto creation of DIN rails. The default value is <code>true</code>. Created only if <b>Profile Type</b> property = <code>Rectangle</code>.</li>
@@ -158,12 +158,12 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260118194528
+Cached time: 20260118194709
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.115 seconds
-Real time usage: 0.142 seconds
+CPU time usage: 0.126 seconds
+Real time usage: 0.345 seconds
 Preprocessor visited node count: 2152/1000000
 Post&#8208;expand include size: 21244/2097152 bytes
 Template argument size: 4541/2097152 bytes
@@ -174,19 +174,19 @@ Unstrip post&#8208;expand size: 1376/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   40.012      1 -total
- 34.60%   13.844     27 Template:PropertyData
- 26.36%   10.546     27 Template:Variable
- 11.39%    4.559     13 Template:Value
-  9.45%    3.780      1 Template:GuiCommand
-  7.18%    2.875      3 Template:TitleProperty
-  7.14%    2.855     36 Template:Incode
-  4.69%    1.877      2 Template:Code
-  4.68%    1.871      2 Template:Docnav
-  3.78%    1.511      6 Template:KEY
+100.00%  149.794      1 -total
+ 20.18%   30.229      3 Template:MenuCommand
+ 13.52%   20.252     27 Template:PropertyData
+ 10.31%   15.442      3 Template:FileName
+  9.98%   14.943     27 Template:Variable
+  9.46%   14.172      1 Template:Button
+  9.09%   13.613      2 Template:Docnav
+  8.00%   11.984      3 Template:TitleProperty
+  7.55%   11.316      2 Template:Code
+  5.66%    8.482     13 Template:Value
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:372376-0!canonical and timestamp 20260118194528 and revision id 1740796. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:372376-0!canonical and timestamp 20260118194709 and revision id 1740800. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
