--- a/wiki/Cables_CableLightPoint.html
+++ b/wiki/Cables_CableLightPoint.html
@@ -73,7 +73,7 @@
 <h3><span class="mw-headline" id="Data">Data</span></h3>
 <p><span style="color: #fdfdfd; background-color: #909090; font-size: 112%; font-weight: bold; margin-bottom: .3em; padding: 0px 10px 1px 10px; page-break-after: avoid;">Cable Light Point</span>
 </p>
-<ul><li><span style="font-size:60%; padding-right:0.8em;">Data</span><b>Claim Children</b><span style="font-size:80%;"> (<code>Bool</code>)</span>: If it is <code>true</code> it will claim the linked SuppLines as children in the <a href="Tree_View.html" title="Tree View">Tree View</a> (<span style="color:blue;">introduced in version 0.3.3</span>).</li>
+<ul><li><span style="font-size:60%; padding-right:0.8em;">Data</span><b>Claim Children</b><span style="font-size:80%;"> (<code>Bool</code>)</span>: If set to <code>true</code> it will claim the linked SuppLines as children in the <a href="Tree_View.html" title="Tree View">Tree View</a> (<span style="color:blue;">introduced in version 0.3.3</span>).</li>
 <li><span style="font-size:60%; padding-right:0.8em;">Data</span><b>Diameter</b><span style="font-size:80%;"> (<code>Length</code>)</span>: Specifies the outer diameter of the ring. The default diameter is 20 mm.</li>
 <li><span style="font-size:60%; padding-right:0.8em;">Data</span><b>Height</b><span style="font-size:80%;"> (<code>Length</code>)</span>: Specifies the height of the ring. The default height is 5 mm.</li>
 <li><span style="font-size:60%; padding-right:0.8em;">Data</span><b>Preset</b><span style="font-size:80%;"> (<code>Enumeration</code>)</span>: Specifies the predefined set of parameters for Cable Light Point. The default preset is <code>Customized</code>. This property is currently not used.</li>
@@ -94,12 +94,12 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260118193709
+Cached time: 20260118194709
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.092 seconds
-Real time usage: 0.299 seconds
+CPU time usage: 0.072 seconds
+Real time usage: 0.175 seconds
 Preprocessor visited node count: 550/1000000
 Post&#8208;expand include size: 9536/2097152 bytes
 Template argument size: 3024/2097152 bytes
@@ -110,19 +110,19 @@ Unstrip post&#8208;expand size: 1044/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   91.685      1 -total
- 36.08%   33.076      2 Template:Docnav
- 26.95%   24.705      1 Template:GuiCommand
- 16.00%   14.669      5 Template:PropertyData
- 10.74%    9.848      5 Template:Variable
- 10.73%    9.835      1 Template:Value
-  7.92%    7.257      2 Template:KEY
-  5.93%    5.435      6 Template:Incode
-  2.74%    2.516      1 Template:TRUE
-  2.64%    2.416      1 Template:TitleProperty
+100.00%   59.442      1 -total
+ 32.84%   19.519      5 Template:PropertyData
+ 23.69%   14.081      5 Template:Variable
+ 16.74%    9.948      1 Template:GuiCommand
+ 15.45%    9.184      1 Template:TitleProperty
+  9.53%    5.664      6 Template:Incode
+  8.98%    5.336      1 Template:Value
+  6.74%    4.005      2 Template:MenuCommand
+  5.18%    3.080      2 Template:Docnav
+  4.58%    2.723      2 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:373299-0!canonical and timestamp 20260118193710 and revision id 1740789. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:373299-0!canonical and timestamp 20260118194708 and revision id 1740798. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
