--- a/wiki/Cables_CableBox.html
+++ b/wiki/Cables_CableBox.html
@@ -158,12 +158,12 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260118194709
+Cached time: 20260118194737
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.126 seconds
-Real time usage: 0.345 seconds
+CPU time usage: 0.102 seconds
+Real time usage: 0.132 seconds
 Preprocessor visited node count: 2152/1000000
 Post&#8208;expand include size: 21244/2097152 bytes
 Template argument size: 4541/2097152 bytes
@@ -174,19 +174,19 @@ Unstrip post&#8208;expand size: 1376/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  149.794      1 -total
- 20.18%   30.229      3 Template:MenuCommand
- 13.52%   20.252     27 Template:PropertyData
- 10.31%   15.442      3 Template:FileName
-  9.98%   14.943     27 Template:Variable
-  9.46%   14.172      1 Template:Button
-  9.09%   13.613      2 Template:Docnav
-  8.00%   11.984      3 Template:TitleProperty
-  7.55%   11.316      2 Template:Code
-  5.66%    8.482     13 Template:Value
+100.00%   49.818      1 -total
+ 32.68%   16.282     27 Template:PropertyData
+ 23.39%   11.652     27 Template:Variable
+ 10.89%    5.423     13 Template:Value
+ 10.05%    5.006      3 Template:TitleProperty
+  9.05%    4.509      1 Template:GuiCommand
+  7.81%    3.891     36 Template:Incode
+  4.84%    2.409      2 Template:Docnav
+  4.46%    2.221      3 Template:MenuCommand
+  4.08%    2.034      2 Template:Code
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:372376-0!canonical and timestamp 20260118194709 and revision id 1740800. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:372376-0!canonical and timestamp 20260118194737 and revision id 1740800. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
