--- a/wiki/Cables_CableConduit.html
+++ b/wiki/Cables_CableConduit.html
@@ -1,7 +1,7 @@
 <link href="site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Cables CableConduit</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="en" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="index.php?title=Special;Translate&amp;group=page-Cables+CableConduit&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="de/Cables_CableConduit.html" class="mw-pt-progress mw-pt-progress--complete" title="Cables Leitungsf&uuml;hrung (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="de/Cables_CableConduit.html" class="mw-pt-progress mw-pt-progress--high" title="Cables Leitungsf&uuml;hrung (96% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><span class="mw-pt-languages-ui mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="en" dir="ltr">English</span></li>
-<li><a href="fr/Cables_CableConduit.html" class="mw-pt-progress mw-pt-progress--complete" title="Cables Gaine (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li></ul></div>
+<li><a href="fr/Cables_CableConduit.html" class="mw-pt-progress mw-pt-progress--high" title="Cables Gaine (96% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li></ul></div>
 <div class="docnav">
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="File/Cables_Cable.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="Cables_Cable.html" title="Cables Cable">Cable</a></div>
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="File/Cables_CableBox.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="Cables_CableBox.html" title="Cables CableBox">CableBox</a>
@@ -101,35 +101,35 @@ or <a href="Cables_CompoundPath.html" title="Cables CompoundPath">Cables Compoun
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260118194528
+Cached time: 20260118194756
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.091 seconds
-Real time usage: 0.123 seconds
+CPU time usage: 0.102 seconds
+Real time usage: 0.125 seconds
 Preprocessor visited node count: 662/1000000
 Post&#8208;expand include size: 10471/2097152 bytes
 Template argument size: 2769/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 858/5000000 bytes
+Unstrip post&#8208;expand size: 848/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   25.892      1 -total
- 28.34%    7.338      7 Template:PropertyData
- 21.35%    5.528      7 Template:Variable
- 14.04%    3.636      1 Template:GuiCommand
- 11.50%    2.978      4 Template:TitleProperty
-  9.47%    2.451      2 Template:Docnav
-  7.57%    1.960      1 Template:FALSE
-  6.96%    1.801      7 Template:Incode
-  6.54%    1.693      2 Template:Caption
-  6.52%    1.689      4 Template:TRUE
+100.00%   28.861      1 -total
+ 36.49%   10.531      7 Template:PropertyData
+ 31.16%    8.994      7 Template:Variable
+ 13.48%    3.890      4 Template:TitleProperty
+ 11.00%    3.175      1 Template:GuiCommand
+  8.79%    2.537      2 Template:Caption
+  7.61%    2.195      7 Template:Incode
+  7.29%    2.105      1 Template:FALSE
+  5.95%    1.716      2 Template:Docnav
+  4.93%    1.422      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:382576-0!canonical and timestamp 20260118194527 and revision id 1740795. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:382576-0!canonical and timestamp 20260118194756 and revision id 1740795. Rendering was triggered because: api-parse
  -->
 </div>
 </div><script src="site.js"></script>
