--- a/wiki/Cables_ElectricalDevice.html
+++ b/wiki/Cables_ElectricalDevice.html
@@ -1,7 +1,7 @@
 <link href="site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Cables ElectricalDevice</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="en" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="index.php?title=Special;Translate&amp;group=page-Cables+ElectricalDevice&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="de/Cables_ElectricalDevice.html" class="mw-pt-progress mw-pt-progress--complete" title="Cables Betriebsmittel (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="de/Cables_ElectricalDevice.html" class="mw-pt-progress mw-pt-progress--high" title="Cables Betriebsmittel (96% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><span class="mw-pt-languages-ui mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="en" dir="ltr">English</span></li>
-<li><a href="fr/Cables_ElectricalDevice.html" class="mw-pt-progress mw-pt-progress--complete" title="Cables Dispositif &eacute;lectrique (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li></ul></div>
+<li><a href="fr/Cables_ElectricalDevice.html" class="mw-pt-progress mw-pt-progress--high" title="Cables Dispositif &eacute;lectrique (96% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li></ul></div>
 <div class="docnav">
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="File/Cables_CableLightPoint.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="Cables_CableLightPoint.html" title="Cables CableLightPoint">CableLightPoint</a></div>
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="File/Cables_Material.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="Cables_Material.html" title="Cables Material">Material</a>
@@ -152,7 +152,7 @@
 <ul><li><span style="font-size:60%; padding-right:0.8em;">Data</span><b>Base</b><span style="font-size:80%;"> (<code>Link</code>)</span>: An external shape of any <a href="Part_Workbench.html" title="Part Workbench">Shape</a>-based base object can be used here. This will replace the default method of shape creaction and an external shape will be used. <b>Number Of Terminals</b> and <b>Number Of Supp Lines</b> parameters become visible and can be changed if Base property is not None.</li></ul>
 <p><span style="color: #fdfdfd; background-color: #909090; font-size: 112%; font-weight: bold; margin-bottom: .3em; padding: 0px 10px 1px 10px; page-break-after: avoid;">Electrical Device</span>
 </p>
-<ul><li><span style="font-size:60%; padding-right:0.8em;">Data</span><b>Claim Children</b><span style="font-size:80%;"> (<code>Bool</code>)</span>: If it is <code>true</code> it will claim the linked Terminals and SuppLines as children in the <a href="Tree_View.html" title="Tree View">Tree View</a> (<span style="color:blue;">introduced in version 0.3.3</span>).</li>
+<ul><li><span style="font-size:60%; padding-right:0.8em;">Data</span><b>Claim Children</b><span style="font-size:80%;"> (<code>Bool</code>)</span>: If set to <code>true</code> it will claim the linked Terminals and SuppLines as children in the <a href="Tree_View.html" title="Tree View">Tree View</a> (<span style="color:blue;">introduced in version 0.3.3</span>).</li>
 <li><span style="font-size:60%; padding-right:0.8em;">Data</span><b>Number Of Supp Lines</b><span style="font-size:80%;"> (<code>Integer</code>)</span>: (hidden by default) Specifies the number of a <a href="Cables_SuppLines.html" title="Cables SuppLines">SuppLines</a> child objects. The default value is 0.</li>
 <li><span style="font-size:60%; padding-right:0.8em;">Data</span><b>Number Of Terminals</b><span style="font-size:80%;"> (<code>Integer</code>)</span>: (hidden by default) Specifies the number of a <a href="Cables_CableTerminal.html" title="Cables CableTerminal">CableTerminal</a> child objects. The default value is 1.</li>
 <li><span style="font-size:60%; padding-right:0.8em;">Data</span><b>Preset</b><span style="font-size:80%;"> (<code>Enumeration</code>)</span>: Specifies the predefined set of parameters for Electrical Device. The default preset is <code>MCB_1-Pole</code>.</li></ul>
@@ -173,35 +173,35 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260118194031
+Cached time: 20260118194923
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.103 seconds
-Real time usage: 0.178 seconds
+CPU time usage: 0.099 seconds
+Real time usage: 0.117 seconds
 Preprocessor visited node count: 931/1000000
 Post&#8208;expand include size: 11642/2097152 bytes
 Template argument size: 3716/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 7/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 2145/5000000 bytes
+Unstrip post&#8208;expand size: 2135/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   79.575      1 -total
- 40.33%   32.089      2 Template:TitleProperty
- 12.83%   10.208      1 Template:TRUE
-  7.78%    6.190      6 Template:Code
-  6.93%    5.512      2 Template:Value
-  6.63%    5.276      6 Template:PropertyData
-  5.29%    4.210      1 Template:GuiCommand
-  4.86%    3.864      6 Template:Variable
-  2.94%    2.341     13 Template:Incode
-  2.49%    1.985      1 Template:Caption
+100.00%   28.101      1 -total
+ 20.96%    5.891      6 Template:PropertyData
+ 15.31%    4.302      6 Template:Variable
+ 11.22%    3.154      6 Template:Code
+ 11.10%    3.118      2 Template:TitleProperty
+  9.91%    2.786      1 Template:GuiCommand
+  6.79%    1.907      2 Template:Docnav
+  6.40%    1.799     13 Template:Incode
+  5.13%    1.441      8 Template:FileName
+  4.30%    1.209      2 Template:Value
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:394929-0!canonical and timestamp 20260118194032 and revision id 1740790. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:394929-0!canonical and timestamp 20260118194923 and revision id 1740797. Rendering was triggered because: api-parse
  -->
 </div>
 </div><script src="site.js"></script>
