--- a/wiki/Cables_CableConnector.html
+++ b/wiki/Cables_CableConnector.html
@@ -1,7 +1,7 @@
 <link href="site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Cables CableConnector</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="en" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="index.php?title=Special;Translate&amp;group=page-Cables+CableConnector&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="de/Cables_CableConnector.html" class="mw-pt-progress mw-pt-progress--complete" title="Cables Leitungsverbindung (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="de/Cables_CableConnector.html" class="mw-pt-progress mw-pt-progress--high" title="Cables Leitungsverbindung (99% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><span class="mw-pt-languages-ui mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="en" dir="ltr">English</span></li>
-<li><a href="fr/Cables_CableConnector.html" class="mw-pt-progress mw-pt-progress--complete" title="Cables Connecteur (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
+<li><a href="fr/Cables_CableConnector.html" class="mw-pt-progress mw-pt-progress--high" title="Cables Connecteur (99% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="pl/Cables_CableConnector.html" class="mw-pt-progress mw-pt-progress--low" title="Kable: Z&#322;&#261;cze kablowe (1% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <div class="docnav">
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="File/Cables_CableBox.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="Cables_CableBox.html" title="Cables CableBox">CableBox</a></div>
@@ -203,35 +203,35 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260118194709
+Cached time: 20260118194816
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.120 seconds
-Real time usage: 0.510 seconds
+CPU time usage: 0.137 seconds
+Real time usage: 0.223 seconds
 Preprocessor visited node count: 1276/1000000
 Post&#8208;expand include size: 16564/2097152 bytes
 Template argument size: 4559/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 7/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 2304/5000000 bytes
+Unstrip post&#8208;expand size: 2294/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  342.914      1 -total
- 83.71%  287.044      6 Template:Code
-  4.13%   14.150     10 Template:PropertyData
-  1.90%    6.531     10 Template:Variable
-  1.50%    5.132      2 Template:TitleProperty
-  1.38%    4.737      1 Template:GuiCommand
-  1.09%    3.755      3 Template:Caption
-  1.05%    3.587     12 Template:FileName
-  1.03%    3.520      1 Template:Button
-  1.02%    3.501     20 Template:Incode
+100.00%   56.659      1 -total
+ 13.98%    7.919      1 Template:GuiCommand
+ 13.25%    7.508     10 Template:PropertyData
+ 11.11%    6.295      2 Template:Docnav
+ 10.64%    6.028      2 Template:TitleProperty
+  9.74%    5.521      6 Template:Code
+  9.58%    5.425     10 Template:Variable
+  6.03%    3.414     20 Template:Incode
+  5.82%    3.298      1 Template:Button
+  5.08%    2.879     12 Template:FileName
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:373295-0!canonical and timestamp 20260118194708 and revision id 1740799. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:373295-0!canonical and timestamp 20260118194816 and revision id 1740799. Rendering was triggered because: api-parse
  -->
 </div>
 </div><script src="site.js"></script>
