--- a/wiki/Release_notes_1.1.html
+++ b/wiki/Release_notes_1.1.html
@@ -378,7 +378,7 @@
 <li>The <span typeof="mw:File"><a href="index.php?title=FEM_SolverElmer.svg&amp;filetimestamp=20241127174550&amp;.html" class="mw-file-description"><img src="File/FEM_SolverElmer.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="FEM_SolverElmer.html" title="FEM SolverElmer">Elmer solver's</a> object and task panel were reworked similar to what was done before for CalculiX. It now works with the new implementation of <span typeof="mw:File"><a href="index.php?title=FEM_MeshNetgenFromShape.svg&amp;filetimestamp=20241127174540&amp;.html" class="mw-file-description"><img src="File/FEM_MeshNetgenFromShape.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="FEM_MeshNetgenFromShape.html" title="FEM MeshNetgenFromShape">Netgen</a>. Moreover, ParaView PVD files can now be imported. <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD/pull/24912">Pull request #24912</a></li>
 <li>Three new <span typeof="mw:File"><a href="index.php?title=FEM_Examples.svg&amp;filetimestamp=20200822023723&amp;.html" class="mw-file-description"><img src="File/FEM_Examples.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="FEM_Examples.html" title="FEM Examples">FEM examples</a> were added - one for the newly implemented electrostatics with the refactored CalculiX solver, one for the newly implemented pressure loads on edges of 2D models and one for the cyclic symmetry introduced in FreeCAD 1.0. <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD/pull/25117">Pull request #25117</a>, <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD/pull/25191">Pull request #25191</a> and <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD/pull/25268">Pull request #25268</a></li></ul>
 <h2><span class="mw-headline" id="Material_Workbench">Material Workbench</span></h2>
-<ul><li>Materials can now be stored in external datastores. This feature is experimental and has to be activated explicitly when compiling the source code. It is not avialable in the standard FreeCAD builds. <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD/pull/21047">Pull request #21047</a></li></ul>
+<ul><li>Materials can now be stored in external datastores. This feature is experimental and has to be activated explicitly when compiling the source code. It is not available in the standard FreeCAD builds. <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD/pull/21047">Pull request #21047</a></li></ul>
 <h3><span class="mw-headline" id="Further_Material_improvements">Further Material improvements</span></h3>
 <ul><li>Several new materials with physical properties were added to the material database:
 <ul><li><a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Polycarbonate">Polycarbonate</a> <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD/pull/19432">Pull request #19432</a></li>
@@ -515,12 +515,12 @@
 <li>The alignment of sketches in SVG export and legacy DXF export has been fixed. <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD/pull/19765">Pull request #19765</a></li></ul>
 <!-- 
 NewPP limit report
-Cached time: 20260117220706
+Cached time: 20260118222651
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.338 seconds
-Real time usage: 0.639 seconds
+CPU time usage: 0.311 seconds
+Real time usage: 0.477 seconds
 Preprocessor visited node count: 746/1000000
 Post&#8208;expand include size: 3528/2097152 bytes
 Template argument size: 533/2097152 bytes
@@ -531,19 +531,19 @@ Unstrip post&#8208;expand size: 1570/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   43.844      1 -total
- 50.89%   22.312      1 Template:VeryImportantMessage
- 10.20%    4.470      2 Template:PropertyData
-  9.25%    4.057      1 Template:VersionMinus
-  8.39%    3.679      2 Template:Message
-  7.26%    3.182      1 Template:VersionPlus
-  5.18%    2.273      2 Template:Variable
-  4.23%    1.854      1 Template:Incode
-  3.57%    1.565      5 Template:KEY
-  3.29%    1.441      1 Template:TOCright
+100.00%   34.573      1 -total
+ 44.55%   15.403      1 Template:VersionPlus
+ 13.70%    4.738      1 Template:VersionMinus
+ 12.03%    4.158      2 Template:Message
+  7.78%    2.691      5 Template:KEY
+  7.26%    2.509      2 Template:PropertyData
+  4.30%    1.488      1 Template:TOCright
+  4.17%    1.442      2 Template:Variable
+  3.32%    1.148      1 Template:Incode
+  2.61%    0.902      1 Template:VeryImportantMessage
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:363849-0!canonical and timestamp 20260117220706 and revision id 1739730. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:363849-0!canonical and timestamp 20260118222717 and revision id 1740827. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
